Colaboratory を使用して作成しました

--- a/javascript_aizuonline01.ipynb
+++ b/javascript_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "javascript_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNP69fu93jqwxzXXLU/Cr0W",
+      "authorship_tag": "ABX9TyPpranp4/yAEsGlV8ZSHnBR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1148,7 +1148,7 @@
         "    }\r\n",
         "}\r\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1161,15 +1161,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mMsDtetANGqO"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -1251,62 +1242,48 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "I0xqxwL6v4gf",
+        "outputId": "8a4684b2-7add-4eee-e915-02033e635ee8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "9KC4AhNVkjhh",
-        "outputId": "8b59ba24-ee5f-4ae8-9e37-79f9e5d66e36"
-      },
-      "source": [
-        "%%writefile officialhouse.cpp\n",
-        "#include <iostream>\n",
-        "int main(){\n",
-        "    int A[5][4][11], n;\n",
-        "    for (int i=1; i<=4; i++)\n",
-        "        for (int j=1; j<=3; j++)\n",
-        "            for (int k=1; k<=10; k++) A[i][j][k] = 0;\n",
-        "    std::cin >> n;\n",
-        "    for (int i=0; i<n; i++){\n",
-        "        int b,f,r,v;\n",
-        "        std::cin >> b >> f >> r >> v;\n",
-        "        A[b][f][r] += v;\n",
-        "    }\n",
-        "    for (int f=1; f<=4; f++){\n",
-        "        if (f > 1) std::cout << \"####################\\n\";\n",
-        "        for (int b=1; b <=3; b++){\n",
-        "            for (int r=1; r<=10; r++){\n",
-        "                 std::cout << \" \" << A[f][b][r];\n",
-        "            }\n",
-        "            std::cout << \"\\n\";\n",
-        "        }\n",
-        "    }\n",
-        "    return 0;\n",
-        "}"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting officialhouse.cpp\n"
-          ],
-          "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9ZLB-DYzkjX6",
-        "outputId": "2f1455ef-c14c-4344-e182-d191ca31f742"
       },
       "source": [
-        "!g++ officialhouse.cpp -o officialhouse; echo 3 1 1 3 8 3 2 2 7 4 3 8 1 |./officialhouse"
+        "%%script node\r\n",
+        "let input = require('fs').readFileSync('/dev/stdin', 'utf8');\r\n",
+        "input = \"3 1 1 3 8 3 2 2 7 4 3 8 1 \";\r\n",
+        "const expr = input.split(/[\\n\\s]/).filter(item => item !== \"\");\r\n",
+        "expr.splice(0, 1);\r\n",
+        "\r\n",
+        "let rooms = Array(4).fill(0).map(x => Array(3).fill(0).map(x => Array(10).fill(0)));\r\n",
+        "let building = 0;\r\n",
+        "let floor = 0;\r\n",
+        "let room = 0;\r\n",
+        "let value = 0;\r\n",
+        "let line = \"\";\r\n",
+        "\r\n",
+        "for (let i = 0; i < expr.length; i++) {\r\n",
+        "    if (i % 4 !== 0) continue;\r\n",
+        "    building = expr[i]-1;\r\n",
+        "    floor = expr[i + 1]-1;\r\n",
+        "    room = expr[i + 2]-1;\r\n",
+        "    value = expr[i + 3];\r\n",
+        "    rooms[building][floor][room] += parseInt(value);\r\n",
+        "\r\n",
+        "}\r\n",
+        "\r\n",
+        "for (let i = 0; i < 4; i++) {\r\n",
+        "    if (i > 0) console.log(\"####################\");\r\n",
+        "    for (let j = 0; j < 3; j++) {\r\n",
+        "        line = \"\";\r\n",
+        "        for (let k =0; k < 10; k++){\r\n",
+        "            line += \" \" + String(rooms[i][j][k]);\r\n",
+        "        }\r\n",
+        "        console.log(line);\r\n",
+        "    }\r\n",
+        "}\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1332,15 +1309,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "I0xqxwL6v4gf"
+        "id": "GwG1gMYiCiIh"
       },
       "source": [
-        "%%script node\r\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "markdown",
