Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMx3dCYf9GpV0ZCwWhl2MNW",
+      "authorship_tag": "ABX9TyNzmPYTUZhWW1G307Ny0QHt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,12 +32,18 @@
       },
       "source": [
         "# メモ\n",
-        "\n",
-        "1. Colab の環境を利用して Haskellを勉強する。\n",
-        "1. Colab の環境は Hakell はインストールされていないので、インストールする。\n",
-        "1. 無料の Colab の場合、数時間でクリアされてしまうので再インストールが必要。\n",
-        "1. Colab の環境で Haskell のインタラクティブ環境は使えないので、`%%writefile filename.hs` でファイルを作り、`!runghc filename.hs` で実行する。\n",
-        "\n",
+        "1. このノートブックは Colab で読まれることを想定している。 是非 Colab で開いてください。\n",
+        "1. Colab の環境を利用して Haskellを勉強する。Colab の環境は Hakell はインストールされていないので、インストールする。\n",
+        "1. Colab の環境で Haskell のインタラクティブ環境は使えないので、`%%writefile filename.hs` でファイルを作り、`!runghc filename.hs` で実行するか、!ghc -e でワンライナーで実行する。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "npDz1ryYbkrF"
+      },
+      "source": [
+        "参考\n",
         "1. とりあえずは Haskell の入門書や入門サイトからサンプルプログラムを入力してみる。\n",
         "1. Learn You A Haskell For Great Good! (http://learnyouahaskell.com/)  \n",
         "1. A Gentle Introduction to Haskell (https://www.haskell.org/tutorial/)\n",
@@ -67,7 +73,7 @@
         "%%capture\n",
         "!apt install ghc"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -104,6 +110,7 @@
         "outputId": "1ab5bbda-792f-438f-c797-e6173e8895e8"
       },
       "source": [
+        "# ファイルを作る\n",
         "%%writefile hello.hs\n",
         "main = putStrLn \"hello, world\""
       ],
@@ -128,6 +135,7 @@
         "outputId": "b4074dbf-ca31-4b8b-8d77-d9c07c365e95"
       },
       "source": [
+        "# ファイルを実行する\r\n",
         "!runghc hello.hs"
       ],
       "execution_count": null,
@@ -151,7 +159,7 @@
         "outputId": "eebba1d2-f09d-4825-ada2-44e350d8e3ea"
       },
       "source": [
-        "# 実験\n",
+        "# ワンライナーで実行する\n",
         "!ghc -e 'putStrLn \"hello world!\"'"
       ],
       "execution_count": null,
@@ -163,40 +171,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yFdu5g6zJDd2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c40eec25-c1b2-4ddb-f0dc-493f144c6c26"
-      },
-      "source": [
-        "!ghc -e '\"hello world!!!\"'"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\"hello world!!!\"\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_lQK25YdzS15"
-      },
-      "source": [
-        "対話型の repl であるところの ghci は Colab の環境では使えない。\n",
-        "\n",
-        "Haskell の入門書などの ghci で書かれている部分は工夫が必要。"
       ]
     },
     {
@@ -348,6 +322,54 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m0M_Is7VcMPU",
+        "outputId": "a21a9772-f4c9-42a8-bd07-5636c404eee7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験 ワンライナーにできるか\r\n",
+        "!ghc -e \"let fac  n = if n == 0 then 1 else n * fac (n-1) in print ( fac 42 )\""
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1405006117752879898543142606244511569936384000000000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8w4PrTw5cqom",
+        "outputId": "f08d0ab5-02bc-4b23-c690-9e4fdc7e5e4a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験 putStLn にしてみる\r\n",
+        "!ghc -e \"let fac  n = if n == 0 then 1 else n * fac (n-1) in putStrLn (show ( fac 42 ))\""
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1405006117752879898543142606244511569936384000000000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "fPcnaEfF-Y-y"
@@ -373,15 +395,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b0646b8d-75c6-4544-8320-1df6dcc4f900"
+        "outputId": "95da4cae-6ee1-4e39-d487-986f3ada7b6d"
       },
       "source": [
+        "# 以下のような関数の作り方はなんと呼ぶのか。パターンマッチング?\n",
         "%%writefile fac01.hs\n",
         "fac 0 = 1  \n",
         "fac n = n * fac (n-1)  \n",
         "main = print (fac 42)  \n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,6 +488,35 @@
         "!runghc arithmetic01.hs"
       ],
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "15\n",
+            "15\n",
+            "16\n",
+            "2.5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KRkEzsyVdsJB",
+        "outputId": "2130ff44-3ade-44a4-c546-43c6248dffa0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e '3*5'\r\n",
+        "!ghc -e '4 ^ 2 - 1'\r\n",
+        "!ghc -e '(1-5)^(3*2 - 4)'\r\n",
+        "!ghc -e '5 / 2'"
+      ],
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
