Colaboratory を使用して作成しました

--- a/javascript_aizuonline01.ipynb
+++ b/javascript_aizuonline01.ipynb
@@ -6,7 +6,7 @@
       "name": "javascript_aizuonline01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNXkP/4sXfnBkS2ks3Y3Jbb",
+      "authorship_tag": "ABX9TyN5hkTe5WEx/wL4mnElkmvw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1311,15 +1311,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GwG1gMYiCiIh"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "MoY5kTtheI2a"
       },
       "source": [
@@ -1335,58 +1326,48 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BRZMtp2d39jV",
+        "id": "hMdc-7j_beru",
+        "outputId": "4181cc84-ad36-471e-d431-0eb3dcef1c86",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "bf702dc8-ab41-458a-f583-1a3e8db0185e"
-      },
-      "source": [
-        "%%writefile matrixvectormultiplication.cpp\n",
-        "#include <iostream>\n",
-        "\n",
-        "int main(){\n",
-        "    int n, m, A[100][100], b[100], c[100];\n",
-        "    std::cin >> n >> m;\n",
-        "    for (int i=0; i<n; i++)\n",
-        "        for (int j=0; j<m; j++) std::cin >> A[i][j];\n",
-        "    for (int i=0; i<m; i++) std::cin >> b[i];\n",
-        "\n",
-        "    for (int i=0; i<n; i++){\n",
-        "        c[i] = 0;\n",
-        "        for (int j=0; j<m; j++){\n",
-        "            c[i] += A[i][j]*b[j];\n",
-        "        }\n",
-        "    }\n",
-        "    \n",
-        "    for (int i=0; i<n; i++) std::cout << c[i] << \"\\n\";\n",
-        "    return 0;\n",
-        "}"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Overwriting matrixvectormultiplication.cpp\n"
-          ],
-          "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Zfr-O0KG3-Bb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e7972665-0643-4732-d0aa-919b0a94be5b"
       },
       "source": [
-        "!g++ matrixvectormultiplication.cpp -o matrixvectormultiplication; echo 3 4 1 2 0 1 0 3 0 1 4 1 1 0 1 2 3 0 |./matrixvectormultiplication"
+        "%%script node\r\n",
+        "let input = require('fs').readFileSync('/dev/stdin', 'utf8');\r\n",
+        "input = \"3 4 1 2 0 1 0 3 0 1 4 1 1 0 1 2 3 0\";\r\n",
+        "const expr = input.split(/[\\n\\s]/).filter(item => item !== \"\");\r\n",
+        "const n = parseInt(expr[0]);\r\n",
+        "const m = parseInt(expr[1]);\r\n",
+        "expr.splice(0, 2);\r\n",
+        "\r\n",
+        "let mat = Array(n).fill(0).map(x => Array(m).fill(0));\r\n",
+        "let vec = Array(m).fill(0)\r\n",
+        "\r\n",
+        "let i = 0;\r\n",
+        "for (let j = 0; j < mat.length; j++) {\r\n",
+        "    for (let k = 0; k < mat[j].length; k++) {\r\n",
+        "        mat[j][k] = expr[i];\r\n",
+        "        i++;\r\n",
+        "    }\r\n",
+        "}\r\n",
+        "for (let l = 0; l < mat.length; l++) {\r\n",
+        "    vec[l] = expr[i];\r\n",
+        "    i++\r\n",
+        "}\r\n",
+        "\r\n",
+        "let c= Array(n).fill(0);\r\n",
+        "for (let i = 0; i < n; i++) {\r\n",
+        "    for (let j = 0; j < m; j++) {\r\n",
+        "        c[i] += mat[i][j] * vec[j];\r\n",
+        "    }\r\n",
+        "}\r\n",
+        "\r\n",
+        "for (let i = 0; i < n; i++){\r\n",
+        "    console.log(c[i]);\r\n",
+        "}\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1400,15 +1381,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "hMdc-7j_beru"
+        "id": "GwG1gMYiCiIh"
       },
       "source": [
-        "%%script node\r\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "markdown",
