--- a/functionaljavascript.ipynb
+++ b/functionaljavascript.ipynb
@@ -6,7 +6,7 @@
       "name": "functionaljavascript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOLl9BmvM1GwCds2EoBqIA7",
+      "authorship_tag": "ABX9TyPjiPy+ZIP2D1SNRRIDjBje",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -525,7 +525,7 @@
         "console.log(array1.reduce((a, b) => a+b));\r\n",
         "console.log(array1.reduce((a, b) => a+b, 0));"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,7 +554,7 @@
         "\r\n",
         "console.log(parabola(2)) // 11"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +600,7 @@
         "        .then(console.log);\r\n",
         "}"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -620,7 +620,7 @@
         "\r\n",
         "console.log(square(double(addOne(2))))"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -653,7 +653,7 @@
         "\r\n",
         "console.log(processNumber(2));\r\n"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +685,7 @@
         "\r\n",
         "console.log(processNumber(2));"
       ],
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,7 +729,7 @@
         "const double = mul(2)\r\n",
         "console.log([0, 2, 4, 5].map(double))\r\n"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,7 +757,7 @@
         "\r\n",
         "console.log([0, 2, 4, 6].map(v => add(1, v)))"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,6 +765,125 @@
             "[ 1, 3, 5, 7 ]\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mhWkFE0MKJMC"
+      },
+      "source": [
+        "# matrix\r\n",
+        "行列を扱うのに、forEachは使えない。 なぜなら、forEachはarray の中身を変えられないから。 変えられないなら変えられないなりのどうすればいいのか、と思い、haskell はどうしているか見てみたら、云々。\r\n",
+        "\r\n",
+        "javascriptで行列をどうするかについて\r\n",
+        "https://stackoverflow.com/questions/17428587/transposing-a-2d-array-in-javascript\r\n",
+        "\r\n",
+        "の回答でいろんな例が出てきているのでこれから読む。 云々。\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9niRW6uQLYgU",
+        "outputId": "9cb90e2b-efc2-4de6-a8a3-7682a50c9633",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script node\r\n",
+        "mat = [\r\n",
+        "    [1, 2, 3],\r\n",
+        "    [1, 2, 3],\r\n",
+        "    [1, 2, 3],\r\n",
+        "]\r\n",
+        "\r\n",
+        "function transposeArray (mat) {\r\n",
+        "    let newMat = [];\r\n",
+        "    for (let j = 0; j < mat[0].length; j++) {  // j are columns\r\n",
+        "        let temp = [];\r\n",
+        "        for (let i = 0; i < mat.length; i++) {  // i are rows\r\n",
+        "            temp.push(mat[i][j]);  // so temp will be the j(th) column in mat\r\n",
+        "        }\r\n",
+        "        newMat.push(temp);  // then just push every column in newMat\r\n",
+        "    }\r\n",
+        "    return newMat;\r\n",
+        "}\r\n",
+        "console.log(transposeArray(mat));\r\n",
+        "\r\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ [ 1, 1, 1 ], [ 2, 2, 2 ], [ 3, 3, 3 ] ]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IeVQztEfTYUM",
+        "outputId": "1ed6e95d-4e7e-405d-c6b7-d5b930ddca30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script node\r\n",
+        "mat = [\r\n",
+        "    [1, 2, 3],\r\n",
+        "    [1, 2, 3],\r\n",
+        "    [1, 2, 3],\r\n",
+        "]\r\n",
+        "\r\n",
+        "function transpose(matrix) {\r\n",
+        "    return zeroFill(getMatrixWidth(matrix)).map(function (r, i) {\r\n",
+        "        return zeroFill(matrix.length).map(function (c, j) {\r\n",
+        "            return matrix[j][i];\r\n",
+        "        });\r\n",
+        "    });\r\n",
+        "}\r\n",
+        "\r\n",
+        "function getMatrixWidth(matrix) {\r\n",
+        "    return matrix.reduce(function (result, row) {\r\n",
+        "        return Math.max(result, row.length);\r\n",
+        "    }, 0);\r\n",
+        "}\r\n",
+        "\r\n",
+        "function zeroFill(n) {\r\n",
+        "    return new Array(n + 1).join('0').split('').map(Number);\r\n",
+        "}\r\n",
+        "\r\n",
+        "console.log(transpose(mat));\r\n"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[stdin]:17\n",
+            "    return matrix.reduce(function (result, row) {\n",
+            "                  ^\n",
+            "\n",
+            "TypeError: matrix.reduce is not a function\n",
+            "    at getMatrixWidth ([stdin]:17:19)\n",
+            "    at transpose ([stdin]:9:18)\n",
+            "    at [stdin]:23:13\n",
+            "    at Script.runInThisContext (vm.js:116:20)\n",
+            "    at Object.runInThisContext (vm.js:306:38)\n",
+            "    at Object.<anonymous> ([stdin]-wrapper:9:26)\n",
+            "    at Module._compile (internal/modules/cjs/loader.js:955:30)\n",
+            "    at evalScript (internal/process/execution.js:80:25)\n",
+            "    at internal/main/eval_stdin.js:29:5\n",
+            "    at Socket.<anonymous> (internal/process/execution.js:192:5)\n"
+          ],
+          "name": "stderr"
         }
       ]
     },
