Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMYN5vbBaYtbBBiCgygkOlX",
+      "authorship_tag": "ABX9TyNFE+bIRjLWuyN9Ktnej6HB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,7 @@
         "%%capture\n",
         "!apt install ghc"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -83,18 +83,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "06863b8a-3bf8-4ca8-9095-ee23b098e364"
+        "outputId": "4a48a29f-ec31-447b-fb1b-6de823aa8455"
       },
       "source": [
         "# インストールされたことの確認\n",
         "!ghc --version"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The Glorious Glasgow Haskell Compilation System, version 8.0.2\n"
+            "/bin/bash: ghc: command not found\n"
           ],
           "name": "stdout"
         }
@@ -159,7 +159,8 @@
         "outputId": "eebba1d2-f09d-4825-ada2-44e350d8e3ea"
       },
       "source": [
-        "# ワンライナーで実行する\n",
+        "# シェル(コマンドライン・ワンライナー)で実行する\n",
+        "# 便利なので多用するかもしれない\n",
         "!ghc -e 'putStrLn \"hello world!\"'"
       ],
       "execution_count": null,
@@ -172,6 +173,19 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lWcYdzaZh0Id"
+      },
+      "source": [
+        "# ユーザーとのやり取りも次のようにすればできるが、Colab では使わないこととする\r\n",
+        "%%script false\r\n",
+        "!ghc -e \"interact (unlines.map reverse.lines)\""
+      ],
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -331,7 +345,7 @@
         "outputId": "a21a9772-f4c9-42a8-bd07-5636c404eee7"
       },
       "source": [
-        "# 実験 ワンライナーにできるか\r\n",
+        "# 実験 コマンドライン・ワンライナーにできるか\r\n",
         "!ghc -e \"let fac  n = if n == 0 then 1 else n * fac (n-1) in print ( fac 42 )\""
       ],
       "execution_count": null,
@@ -375,7 +389,9 @@
         "id": "fPcnaEfF-Y-y"
       },
       "source": [
-        "階乗を計算する関数を作っている。\n"
+        "階乗を計算する関数を作って再帰的に実行している。\n",
+        "\n",
+        "なかなかすごいのではないか。\n"
       ]
     },
     {
@@ -894,26 +910,32 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18f04075-7876-4936-b9a7-2513519785f6"
+        "outputId": "0e4989d4-2d0c-4b3f-d7d1-d7682d2a4479"
       },
       "source": [
-        "# これは haskell の問題ではなくて bash でシングルクォートをどうやってエスケープするかの問題\n",
-        "# bash で $'string' とすると string 内で backslash による escape が意味を持ち、\\t, \\n などが使え、\\' がシングルクォートになる。\n",
-        "# bash terminal のライン上では backslash は文字を escape するだけで, \\t, \\n はそれぞれ t, n になる。\n",
+        "# bash で $'string' とすると string 内で backslash による escape が意味を持つ。\n",
+        "# \\t, \\n などが使え、\\' がシングルクォートになる。\n",
         "!ghc -e $':t \\'X\\''\n",
         "!ghc -e $':t \"hello\"'\n",
+        "!ghc -e ':t \"hello\"'\n",
         "!ghc -e ':t '\"'\"'X'\"'\"\n",
-        "!ghc -e ':t '\\''X'\\'\n"
+        "!ghc -e ':t '\\''X'\\'\n",
+        "!ghc -e  \":t 'X'\"\n",
+        "!echo $'hel\\tlo\\nhello'"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "'X' :: Char\n",
             "\"hello\" :: [Char]\n",
+            "\"hello\" :: [Char]\n",
             "'X' :: Char\n",
-            "'X' :: Char\n"
+            "'X' :: Char\n",
+            "'X' :: Char\n",
+            "hel\tlo\n",
+            "hello\n"
           ],
           "name": "stdout"
         }
@@ -961,7 +983,7 @@
         "id": "j5HGk6ZpuPT5"
       },
       "source": [
-        "上のはまだよくわからないが、たぶん、型クラスで、複数のタイプを含んだものだろう。"
+        "上結果の Num, Fractional, Integral は、型クラス。"
       ]
     },
     {
@@ -1008,7 +1030,7 @@
         "\n",
         "Haskell のリストは型の混在はなし。 型を混在させるにはタプルを用いる。\n",
         "\n",
-        "文字列は単に文字 Char のリスト。"
+        "文字列は文字 Char のリスト。"
       ]
     },
     {
@@ -1093,6 +1115,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "54HkLVZMtxE3"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
