--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "learnhaskell.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNFE+bIRjLWuyN9Ktnej6HB",
+      "authorship_tag": "ABX9TyPXk6AClxWRiD3v1yYBa1Ey",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1099,31 +1098,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ff0ee01a-477d-42d3-c9ea-7ff9ead2e982"
+        "outputId": "0507bd9e-02bf-4666-8a97-a0206ef031bf"
       },
       "source": [
+        "# 実験 ['a'..'e']は便利かも\n",
+        "!ghc -e $'[\\'a\\' .. \\'e\\']'\n",
         "!ghc -e '(1, True)'\n",
-        "!ghc -e $'zip [1 .. 5] [\\'a\\' .. \\'e\\']'\n"
+        "!ghc -e $'zip [1 .. 5] [\\'a\\' .. \\'e\\']'"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "\"abcde\"\n",
             "(1,True)\n",
             "[(1,'a'),(2,'b'),(3,'c'),(4,'d'),(5,'e')]\n"
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "54HkLVZMtxE3"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -1176,6 +1169,82 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G9tnRyO_G5sT",
+        "outputId": "34963fbb-cec7-4cc7-d3db-faf40b1aa4dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e '[1..10]'\r\n",
+        "!ghc -e '[1..3]::[5.10]'"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1,2,3,4,5,6,7,8,9,10]\n",
+            "\n",
+            "<interactive>:0:10: error: parse error on input ‘5.10’\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SYMjyxkeH0Tz",
+        "outputId": "6f468b3a-0b8a-45aa-909c-66f9df569eb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# リスト内包表記\r\n",
+        "!ghc -e '[x^2 | x <- [1..10]]'\r\n",
+        "# mapM_ による1行ごとの出力\r\n",
+        "!ghc -e 'mapM_ print [1..3]'\r\n",
+        "# getContents\r\n",
+        "!echo $'This is a pen.\\nThat is an apple.'\r\n",
+        "!echo $'This is a pen.\\nThat is an apple.' | ghc -e 'getLine'\r\n",
+        "!echo $'This is a pen.\\nThat is an apple.' | ghc -e 'getContents'\r\n",
+        "!echo $'This is a pen.\\nThat is an apple.' | ghc -e 'lines <$> getContents'\r\n",
+        "\r\n",
+        "\r\n"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1,4,9,16,25,36,49,64,81,100]\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "This is a pen.\n",
+            "That is an apple.\n",
+            "\"This is a pen.\"\n",
+            "\"This is a pen.\\nThat is an apple.\\n\"\n",
+            "[\"This is a pen.\",\"That is an apple.\"]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "54HkLVZMtxE3"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
