--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "learnhaskell.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPXk6AClxWRiD3v1yYBa1Ey",
+      "authorship_tag": "ABX9TyMj9bCfGBv1YCOGGZAKddns",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1174,11 +1174,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G9tnRyO_G5sT",
-        "outputId": "34963fbb-cec7-4cc7-d3db-faf40b1aa4dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "G9tnRyO_G5sT",
+        "outputId": "34963fbb-cec7-4cc7-d3db-faf40b1aa4dc"
       },
       "source": [
         "!ghc -e '[1..10]'\r\n",
@@ -1200,39 +1200,75 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SYMjyxkeH0Tz",
-        "outputId": "6f468b3a-0b8a-45aa-909c-66f9df569eb8",
+        "id": "SYMjyxkeH0Tz"
+      },
+      "source": [
+        "# リスト内包表記\r\n",
+        "!ghc -e '[x^2 | x <- [1..10]]'\r\n",
+        "\r\n",
+        "# mapM_ による1行ごとの出力\r\n",
+        "!ghc -e 'mapM_ print [1..3]'\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0d0wmUdFrlbL",
+        "outputId": "e3a27291-3e94-490a-f6f7-3b279325e45e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "# リスト内包表記\r\n",
-        "!ghc -e '[x^2 | x <- [1..10]]'\r\n",
-        "# mapM_ による1行ごとの出力\r\n",
-        "!ghc -e 'mapM_ print [1..3]'\r\n",
         "# getContents\r\n",
         "!echo $'This is a pen.\\nThat is an apple.'\r\n",
         "!echo $'This is a pen.\\nThat is an apple.' | ghc -e 'getLine'\r\n",
         "!echo $'This is a pen.\\nThat is an apple.' | ghc -e 'getContents'\r\n",
         "!echo $'This is a pen.\\nThat is an apple.' | ghc -e 'lines <$> getContents'\r\n",
         "\r\n",
-        "\r\n"
+        "# getContents から lines にしたあとの処理\r\n",
+        "!echo $'288 240' | ghc -e '(map ((\\[x,y] -> gcd (read x) (read y)) . words) . lines ) <$> getContents'\r\n",
+        "#!echo $'This is a pen.\\nThat is an apple.' | ghc -e '(map . lines) <$> getContents'\r\n"
       ],
-      "execution_count": 60,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[1,4,9,16,25,36,49,64,81,100]\n",
-            "1\n",
-            "2\n",
-            "3\n",
             "This is a pen.\n",
             "That is an apple.\n",
             "\"This is a pen.\"\n",
             "\"This is a pen.\\nThat is an apple.\\n\"\n",
-            "[\"This is a pen.\",\"That is an apple.\"]\n"
+            "[\"This is a pen.\",\"That is an apple.\"]\n",
+            "[48]\n",
+            "\n",
+            "<interactive>:0:2: error:\n",
+            "    • Couldn't match expected type ‘String -> b’\n",
+            "                  with actual type ‘[Integer]’\n",
+            "    • Possible cause: ‘map’ is applied to too many arguments\n",
+            "      In the first argument of ‘(<$>)’, namely\n",
+            "        ‘(map ((\\ [x, y] -> gcd (read x) (read y)) . words) lines)’\n",
+            "      In the expression:\n",
+            "        (map ((\\ [x, y] -> gcd (read x) (read y)) . words) lines)\n",
+            "        <$> getContents\n",
+            "      In an equation for ‘it’:\n",
+            "          it\n",
+            "            = (map ((\\ [x, y] -> gcd (read x) (read y)) . words) lines)\n",
+            "              <$> getContents\n",
+            "    • Relevant bindings include it :: IO b (bound at <interactive>:0:1)\n",
+            "\n",
+            "<interactive>:0:50: error:\n",
+            "    • Couldn't match expected type ‘[String]’\n",
+            "                  with actual type ‘String -> [String]’\n",
+            "    • Probable cause: ‘lines’ is applied to too few arguments\n",
+            "      In the second argument of ‘map’, namely ‘lines’\n",
+            "      In the first argument of ‘(<$>)’, namely\n",
+            "        ‘(map ((\\ [x, y] -> gcd (read x) (read y)) . words) lines)’\n",
+            "      In the expression:\n",
+            "        (map ((\\ [x, y] -> gcd (read x) (read y)) . words) lines)\n",
+            "        <$> getContents\n"
           ],
           "name": "stdout"
         }
