--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "learnhaskell.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMj9bCfGBv1YCOGGZAKddns",
+      "authorship_tag": "ABX9TyMRG6CBS83InF+FYy70XsSa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1106,7 +1106,7 @@
         "!ghc -e '(1, True)'\n",
         "!ghc -e $'zip [1 .. 5] [\\'a\\' .. \\'e\\']'"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1184,7 +1184,7 @@
         "!ghc -e '[1..10]'\r\n",
         "!ghc -e '[1..3]::[5.10]'"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1213,13 +1213,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "o5zW6xLTLDWC"
+      },
+      "source": [
+        "# getContents"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "0d0wmUdFrlbL",
-        "outputId": "e3a27291-3e94-490a-f6f7-3b279325e45e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1743ae40-28d3-4b1f-b185-d43a144afac3"
       },
       "source": [
         "# getContents\r\n",
@@ -1227,12 +1236,22 @@
         "!echo $'This is a pen.\\nThat is an apple.' | ghc -e 'getLine'\r\n",
         "!echo $'This is a pen.\\nThat is an apple.' | ghc -e 'getContents'\r\n",
         "!echo $'This is a pen.\\nThat is an apple.' | ghc -e 'lines <$> getContents'\r\n",
+        "!echo\r\n",
+        "# 実験 getContents から lines にしたあとの処理\r\n",
+        "!echo $'288 240' | ghc -e 'map ((\\[x, y] -> gcd (read x) (read y)) . words) . lines <$> getContents'\r\n",
+        "!echo $'288 240' | ghc -e 'map words . lines <$> getContents'\r\n",
+        "!echo $'288 240' | ghc -e 'map ((\\[x, y] -> gcd (read x) (read y)) . words) . lines <$> getContents'\r\n",
+        "!ghc -e 'gcd 24 81'\r\n",
+        "!echo $'288 240' | ghc -e 'map ((\\[x, y] -> gcd 100 (read x)) . words) . lines <$> getContents'\r\n",
+        "!echo\r\n",
+        "!echo $'This is a pen.\\nThat is an apple.' | ghc -e 'map ( words) . lines <$> getContents'\r\n",
+        "!echo $'This is a pen.\\nThat is an apple.' | ghc -e 'map (length) . lines <$> getContents'\r\n",
+        "!ghc -e 'length([\"This\",\"is\",\"a\",\"pen.\"])'\r\n",
+        "!ghc -e 'map length [\"This\",\"is\",\"a\",\"pen.\"]'\r\n",
         "\r\n",
-        "# getContents から lines にしたあとの処理\r\n",
-        "!echo $'288 240' | ghc -e '(map ((\\[x,y] -> gcd (read x) (read y)) . words) . lines ) <$> getContents'\r\n",
-        "#!echo $'This is a pen.\\nThat is an apple.' | ghc -e '(map . lines) <$> getContents'\r\n"
+        "\r\n"
       ],
-      "execution_count": 75,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -1242,37 +1261,32 @@
             "\"This is a pen.\"\n",
             "\"This is a pen.\\nThat is an apple.\\n\"\n",
             "[\"This is a pen.\",\"That is an apple.\"]\n",
+            "\n",
             "[48]\n",
+            "[[\"288\",\"240\"]]\n",
+            "[48]\n",
+            "3\n",
+            "[4]\n",
             "\n",
-            "<interactive>:0:2: error:\n",
-            "    • Couldn't match expected type ‘String -> b’\n",
-            "                  with actual type ‘[Integer]’\n",
-            "    • Possible cause: ‘map’ is applied to too many arguments\n",
-            "      In the first argument of ‘(<$>)’, namely\n",
-            "        ‘(map ((\\ [x, y] -> gcd (read x) (read y)) . words) lines)’\n",
-            "      In the expression:\n",
-            "        (map ((\\ [x, y] -> gcd (read x) (read y)) . words) lines)\n",
-            "        <$> getContents\n",
-            "      In an equation for ‘it’:\n",
-            "          it\n",
-            "            = (map ((\\ [x, y] -> gcd (read x) (read y)) . words) lines)\n",
-            "              <$> getContents\n",
-            "    • Relevant bindings include it :: IO b (bound at <interactive>:0:1)\n",
-            "\n",
-            "<interactive>:0:50: error:\n",
-            "    • Couldn't match expected type ‘[String]’\n",
-            "                  with actual type ‘String -> [String]’\n",
-            "    • Probable cause: ‘lines’ is applied to too few arguments\n",
-            "      In the second argument of ‘map’, namely ‘lines’\n",
-            "      In the first argument of ‘(<$>)’, namely\n",
-            "        ‘(map ((\\ [x, y] -> gcd (read x) (read y)) . words) lines)’\n",
-            "      In the expression:\n",
-            "        (map ((\\ [x, y] -> gcd (read x) (read y)) . words) lines)\n",
-            "        <$> getContents\n"
+            "[[\"This\",\"is\",\"a\",\"pen.\"],[\"That\",\"is\",\"an\",\"apple.\"]]\n",
+            "[14,1,16]\n",
+            "4\n",
+            "[4,2,1,4]\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0DiXDvUJnApQ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
