--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "learnhaskell.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNZuz5pm1/Rt5WIVXYdwzWT",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNGPqkN7uBN/JpaCrb+Lxjp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -831,7 +832,7 @@
         "%%capture\r\n",
         "!apt install ghc"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -846,7 +847,7 @@
       "source": [
         "!ghc -e 'map (\\x ->  x^2) [1..3]'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,7 +871,7 @@
         "!ghc -e 'mapM print [1..3]'\r\n",
         "!ghc -e 'mapM_ print [1..3]' # 結果のリストを返さないバージョン"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,7 +902,7 @@
         "!echo\r\n",
         "!echo $'this\\nis' | ghc -e 'getLine'"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -930,7 +931,7 @@
         "!echo\r\n",
         "!echo $'this\\nis' | ghc -e 'do {x <- getLine ; putStrLn x}'"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -959,7 +960,7 @@
         "!echo\r\n",
         "!echo $'John\\nMike' | ghc -e 'interact $ unlines.map (\"hello \" ++).lines'"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -987,7 +988,7 @@
         "!echo\r\n",
         "!echo $'John\\nMike' | ghc -e 'map (\"hello \" ++).lines <$> getContents'"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1027,7 +1028,7 @@
         "# getContents で全体を取得\r\n",
         "!echo $'10 20\\n30 40\\n50 60' | ghc -e 'getContents'"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1052,7 +1053,7 @@
         "# lines で行に分割\r\n",
         "!echo $'10 20\\n30 40\\n50 60' | ghc -e 'do {input <- getContents; let strList = lines(input) in print strList}'"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1076,7 +1077,7 @@
         "# ファンクターを使うと直接 lines を getContents に働かせる\r\n",
         "!echo $'10 20\\n30 40\\n50 60' | ghc -e 'lines <$> getContents'"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1101,7 +1102,7 @@
         "# ただこのままでは数値になっていない\r\n",
         "!echo $'10 20\\n30 40\\n50 60' | ghc -e 'map words . lines <$> getContents'"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1129,7 +1130,7 @@
         "!echo \r\n",
         "!echo $'10 20\\n30 40\\n50 60' | ghc -e 'getContents >>= print . map (map (read::String -> Int) . words) . lines'"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1159,7 +1160,7 @@
         "!echo\r\n",
         "!echo $'3\\n10 20\\n30 40\\n50 60' | ghc -e 'getContents >>=  print.map(map(read::String -> Int).words).tail.lines'\r\n"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1186,7 +1187,7 @@
         "# コマンドライン・ワンライナーでは便利\r\n",
         "!echo $'10 20' | ghc -e 'getLine >>= print.sum.map read.words'"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1225,7 +1226,7 @@
         "# 冒頭にデータ数があるのを捨てる場合\r\n",
         "!echo $'3\\n10 20\\n30 40\\n50 60' | ghc -e 'getContents >>= print.map(sum.map read.words).tail.lines'\r\n"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1250,7 +1251,7 @@
         "# 結果を一つずつ改行して出力する\r\n",
         "!echo $'3\\n10 20\\n30 40\\n50 60' | ghc -e 'getContents >>= mapM_ print.map(sum.map read.words).tail.lines'\r\n"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1262,6 +1263,96 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OJiuL9yRtU3E",
+        "outputId": "8a671a3a-8ee8-4211-c2aa-6b1ecea46b19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# zip を使う\r\n",
+        "!ghc -e \"zip [1..3] ['A'..]\""
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[(1,'A'),(2,'B'),(3,'C')]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XhG48QFRtzF2",
+        "outputId": "23e73959-0350-40ba-89aa-876022cc1298",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# すべての組み合わせを生成する\r\n",
+        "# <*> はアプリカティブで <$> はファンクター\r\n",
+        "!ghc -e \"(,) <$> [1..3] <*> ['A'..'C']\""
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[(1,'A'),(1,'B'),(1,'C'),(2,'A'),(2,'B'),(2,'C'),(3,'A'),(3,'B'),(3,'C')]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EbcsT3_Vv1DB",
+        "outputId": "555c44cd-33fa-4564-a44d-2a84c2726a8d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# アプリカティブはつぎのように作用する\r\n",
+        "!ghc -e '(<*>) [length, Data.Char.digitToInt . head] [\"f\", \"ba\", \"baz\"]'\r\n",
+        "!ghc -e '(<*>) (Just (\\x -> x * x)) (Just 3)'\r\n",
+        "!ghc -e '(<*>) Nothing (Just 3)'\r\n",
+        "!ghc -e '(<*>) (Just (\\x -> x * x)) Nothing' "
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1,2,3,15,11,11]\n",
+            "Just 9\n",
+            "Nothing\n",
+            "Nothing\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vBX5cY5IxfyM"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
