--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNGPqkN7uBN/JpaCrb+Lxjp",
+      "authorship_tag": "ABX9TyOBqKuUE8sTuiSPc2G04xIH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1268,16 +1268,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "OJiuL9yRtU3E",
-        "outputId": "8a671a3a-8ee8-4211-c2aa-6b1ecea46b19",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8a671a3a-8ee8-4211-c2aa-6b1ecea46b19"
       },
       "source": [
         "# zip を使う\r\n",
         "!ghc -e \"zip [1..3] ['A'..]\""
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1292,17 +1292,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "XhG48QFRtzF2",
-        "outputId": "23e73959-0350-40ba-89aa-876022cc1298",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "23e73959-0350-40ba-89aa-876022cc1298"
       },
       "source": [
         "# すべての組み合わせを生成する\r\n",
         "# <*> はアプリカティブで <$> はファンクター\r\n",
         "!ghc -e \"(,) <$> [1..3] <*> ['A'..'C']\""
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1317,10 +1317,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "EbcsT3_Vv1DB",
-        "outputId": "555c44cd-33fa-4564-a44d-2a84c2726a8d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "555c44cd-33fa-4564-a44d-2a84c2726a8d"
       },
       "source": [
         "# アプリカティブはつぎのように作用する\r\n",
@@ -1329,7 +1329,7 @@
         "!ghc -e '(<*>) Nothing (Just 3)'\r\n",
         "!ghc -e '(<*>) (Just (\\x -> x * x)) Nothing' "
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1346,13 +1346,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vBX5cY5IxfyM"
+        "id": "vBX5cY5IxfyM",
+        "outputId": "e544435b-b00c-4e00-aa7e-55565cf104d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "!ghc -e ':k Maybe'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Maybe :: * -> *\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1515,6 +1527,57 @@
       },
       "source": [
         "上結果の Num, Fractional, Integral は、型クラス。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uveus_IVNwiq"
+      },
+      "source": [
+        "# カインドと型クラス\r\n",
+        "!ghc -e ':k Maybe'\r\n",
+        "!ghc -e ':k Fractional'\r\n",
+        "!ghc -e ':k Num'\r\n",
+        "!ghc -e ':k Integral'\r\n",
+        "\r\n",
+        "# アプリカティブ、ファンクター、モナド\r\n",
+        "!ghc -e ':t (*)'\r\n",
+        "!ghc -e ':t (<*>)'\r\n",
+        "!ghc -e ':t (<$>)'\r\n",
+        "!ghc -e ':t (>>=)'\r\n",
+        "!ghc -e ':t (=<<)'\r\n",
+        "\r\n",
+        "# IOアクションの -> はタイプを取り出せない\r\n",
+        "# printの型の逆と思われる\r\n",
+        "# print :: Show a => a -> IO ()\r\n",
+        "#!ghc -e ':t (->))'\r\n",
+        "\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "avSWO7A2Rn7V",
+        "outputId": "a9bc939b-dd84-453b-8892-2d7183f5d032",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e ':t print'"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "print :: Show a => a -> IO ()\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -1732,7 +1795,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SYMjyxkeH0Tz"
+        "id": "SYMjyxkeH0Tz",
+        "outputId": "8180ca10-7289-4135-aa96-151559cd54e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# リスト内包表記\r\n",
@@ -1741,8 +1808,49 @@
         "# mapM_ による1行ごとの出力\r\n",
         "!ghc -e 'mapM_ print [1..3]'\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1,4,9,16,25,36,49,64,81,100]\n",
+            "1\n",
+            "2\n",
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YKKlsILyKgNM",
+        "outputId": "6b73129a-26b4-477f-f735-9edeecf85727",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# リスト内包表記との組み合わせ\r\n",
+        "!ghc -e 'mapM_ print [x^2 | x <- [1..3]]'\r\n",
+        "!ghc -e 'let list = [x^2 | x <- [1..3]] in  mapM_ print list'\r\n"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "4\n",
+            "9\n",
+            "1\n",
+            "4\n",
+            "9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
