Colaboratory を使用して作成しました

--- a/arabictable.ipynb
+++ b/arabictable.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "arabictable.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMdbmjeBOqsjZh9GmqUP0A1",
+      "authorship_tag": "ABX9TyPLdS2onOnqIVwOdYNPGJ3e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,218 +28,261 @@
       "cell_type": "code",
       "metadata": {
         "id": "gvDnC4VlEOyb",
-        "outputId": "0aa93bae-0e3b-48f8-dc26-ee7eadc66fa5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 250
-        }
+          "height": 230
+        },
+        "outputId": "ab0f81d1-b22d-4214-e51b-21ee1fcc3c03"
       },
       "source": [
-        "# 実験 アラビア語 1. temp.ipynb の王貞治\r\n",
-        "# css.ipynb の w3schools\r\n",
-        "# アラビア語のフォントを大きくする。 フォントを自由に変える。\r\n",
-        "# jsonを使う\r\n",
-        "# 専用のサイトにするか => arabic table\r\n",
-        "# arabic01は duolingo 専用にできるのではないか\r\n",
-        "%%html\r\n",
-        "\r\n",
-        "<style>\r\n",
-        "    th {\r\n",
-        "        /* ヘッダ背景塗りつぶし */\r\n",
-        "        background: #eee;\r\n",
-        "    }\r\n",
-        "\r\n",
-        "    th,\r\n",
-        "    td {\r\n",
-        "        /* 枠線を1本線指定 */\r\n",
-        "        border: solid 1px;\r\n",
-        "        width: auto;\r\n",
-        "    }\r\n",
-        "\r\n",
-        "    table {\r\n",
-        "        /* 枠線を1本線指定 */\r\n",
-        "        border: solid 1px;\r\n",
-        "        border-collapse: collapse;\r\n",
-        "        white-space: nowrap;\r\n",
-        "    }\r\n",
-        "    \r\n",
-        "    table {border-collapse: collapse;border: 2px solid rgb(200, 200, 200);letter-spacing: 1px;font-size: 0.8rem;}td,th {border: 1px solid rgb(190, 190, 190);padding: 10px 20px;}th {background-color: rgb(235, 235, 235);}td {text-align: center;}tr:nth-child(even) td {background-color: rgb(250, 250, 250);}tr:nth-child(odd) td {background-color: rgb(245, 245, 245);}caption {padding: 10px;}\r\n",
-        "</style>\r\n",
-        "\r\n",
-        "<div id='maintable'></div>\r\n",
-        "\r\n",
-        "<script>\r\n",
-        "    var json = [\r\n",
-        "    {\r\n",
-        "        \"latin\": \"a-s-salaamu\",\r\n",
-        "        \"kana\": \"アッサラーム\",\r\n",
-        "        \"arabic\": \"اَلسَّلَامُ\",\r\n",
-        "        \"meaning\": \"peace\"\r\n",
-        "    },\r\n",
-        "    {\r\n",
-        "        \"latin\": \"2alaykum\",\r\n",
-        "        \"kana\": \"アライクム\",\r\n",
-        "        \"arabic\": \"عَلَيْكُمْ\",\r\n",
-        "        \"meaning\": \"on you\"\r\n",
-        "    },\r\n",
-        "    {\r\n",
-        "        \"latin\": \"SabaaH\",\r\n",
-        "        \"kana\": \"すぁバーふ\",\r\n",
-        "        \"arabic\": \"صَبَاح\",\r\n",
-        "        \"meaning\": \"morning\"\r\n",
-        "    },\r\n",
-        "    {\r\n",
-        "        \"latin\": \"marHaban\",\r\n",
-        "        \"kana\": \"マるはバン\",\r\n",
-        "        \"arabic\": \"مَرْحَبًا\",\r\n",
-        "        \"meaning\": \"Hello\"\r\n",
-        "    },\r\n",
-        "    {\r\n",
-        "        \"latin\": \"2anaa bikhayr\",\r\n",
-        "        \"kana\": \"アナー ビクハイる\",\r\n",
-        "        \"arabic\": \"أَنا بِخَيْر\",\r\n",
-        "        \"meaning\": \"I'm fine kl;lj ljk;lkj ljkl;kj lkjlkj lkj;lkj l;kj lklk lkj;kj lkj;lkj; ljl;kj lkj;lkj; l;kjl;;ljklkj lkj;ljkl;jk lkj;ljk\"\r\n",
-        "    }\r\n",
-        "    ]\r\n",
-        "\r\n",
-        "    // table要素を生成\r\n",
-        "    var table = document.createElement('table');\r\n",
-        "\r\n",
-        "    // ヘッダーを作成\r\n",
-        "    var tr = document.createElement('tr');\r\n",
-        "    for (key in json[0]) {\r\n",
-        "        // th要素を生成\r\n",
-        "        var th = document.createElement('th');\r\n",
-        "        // th要素内にテキストを追加\r\n",
-        "        th.textContent = key;\r\n",
-        "        // th要素をtr要素の子要素に追加\r\n",
-        "        tr.appendChild(th);\r\n",
-        "    }\r\n",
-        "    // tr要素をtable要素の子要素に追加\r\n",
-        "    table.appendChild(tr);\r\n",
-        "\r\n",
-        "    // テーブル本体を作成\r\n",
-        "    for (var i = 0; i < json.length; i++) {\r\n",
-        "        // tr要素を生成\r\n",
-        "        var tr = document.createElement('tr');\r\n",
-        "        // th・td部分のループ\r\n",
-        "        for (key in json[0]) {\r\n",
-        "            // td要素を生成\r\n",
-        "            var td = document.createElement('td');\r\n",
-        "            // td要素内にテキストを追加\r\n",
-        "            td.textContent = json[i][key];\r\n",
-        "            // td要素をtr要素の子要素に追加\r\n",
-        "            tr.appendChild(td);\r\n",
-        "        }\r\n",
-        "        // tr要素をtable要素の子要素に追加\r\n",
-        "        table.appendChild(tr);\r\n",
-        "    }\r\n",
-        "    // 生成したtable要素を追加する\r\n",
-        "    document.getElementById('maintable').appendChild(table);\r\n",
-        "    \r\n",
-        "</script>"
+        "#@title\n",
+        "# 実験 アラビア語 1. temp.ipynb の王貞治\n",
+        "# css.ipynb の w3schools\n",
+        "# アラビア語のフォントを大きくする。 フォントを自由に変える。\n",
+        "# jsonを使う\n",
+        "# 専用のサイトにするか => arabic table\n",
+        "# arabic01は duolingo 専用にできるのではないか\n",
+        "%%html\n",
+        "<style>\n",
+        "  th,\n",
+        "  td {\n",
+        "    /* 枠線を1本線指定 */\n",
+        "    border: solid 1px;\n",
+        "    width: auto;\n",
+        "  }\n",
+        "\n",
+        "  table {\n",
+        "    /* 枠線を1本線指定 */\n",
+        "    border: solid 1px;\n",
+        "    border-collapse: collapse;\n",
+        "    white-space: nowrap;\n",
+        "  }\n",
+        "\n",
+        "  table {\n",
+        "    border-collapse: collapse;\n",
+        "    border: 2px solid rgb(200, 200, 200);\n",
+        "    letter-spacing: 1px;\n",
+        "    font-size: 0.8rem;\n",
+        "  }\n",
+        "  td,\n",
+        "  th {\n",
+        "    border: 1px solid rgb(190, 190, 190);\n",
+        "    padding: 10px 20px;\n",
+        "  }\n",
+        "  th {\n",
+        "    background-color: rgb(235, 235, 235);\n",
+        "  }\n",
+        "  td {\n",
+        "    text-align: center;\n",
+        "  }\n",
+        "  tr:nth-child(even) td {\n",
+        "    background-color: rgb(250, 250, 250);\n",
+        "  }\n",
+        "  tr:nth-child(odd) td {\n",
+        "    background-color: rgb(245, 245, 245);\n",
+        "  }\n",
+        "  caption {\n",
+        "    padding: 10px;\n",
+        "  }\n",
+        "  tr td:nth-child(2), tr td:nth-child(3) {\n",
+        "  background: #ccc;\n",
+        "</style>\n",
+        "\n",
+        "<div id=\"maintable\"></div>\n",
+        "\n",
+        "<script>\n",
+        "  var json = [\n",
+        "    {\n",
+        "      latin: \"a-s-salaamu\",\n",
+        "      kana: \"アッサラーム\",\n",
+        "      arabic: \"اَلسَّلَامُ\",\n",
+        "      meaning: \"peace\",\n",
+        "    },\n",
+        "    {\n",
+        "      latin: \"2alaykum\",\n",
+        "      kana: \"アライクム\",\n",
+        "      arabic: \"عَلَيْكُمْ\",\n",
+        "      meaning: \"on you\",\n",
+        "    },\n",
+        "    {\n",
+        "      latin: \"SabaaH\",\n",
+        "      kana: \"すぁバーふ\",\n",
+        "      arabic: \"صَبَاح\",\n",
+        "      meaning: \"morning\",\n",
+        "    },\n",
+        "    {\n",
+        "      latin: \"marHaban\",\n",
+        "      kana: \"マるはバン\",\n",
+        "      arabic: \"مَرْحَبًا\",\n",
+        "      meaning: \"Hello\",\n",
+        "    },\n",
+        "    {\n",
+        "      latin: \"2anaa bikhayr\",\n",
+        "      kana: \"アナー ビクハイる\",\n",
+        "      arabic: \"أَنا بِخَيْر\",\n",
+        "      meaning:\n",
+        "        \"I'm fine kl;lj ljk;lkj ljkl;kj lkjlkj lkj;lkj l;kj lklk lkj;kj lkj;lkj; ljl;kj lkj;lkj; l;kjl;;ljklkj lkj;ljkl;jk lkj;ljk\",\n",
+        "    },\n",
+        "  ];\n",
+        "\n",
+        "  // table要素を生成\n",
+        "  var table = document.createElement(\"table\");\n",
+        "\n",
+        "  // ヘッダーを作成\n",
+        "  var tr = document.createElement(\"tr\");\n",
+        "  for (key in json[0]) {\n",
+        "    // th要素を生成\n",
+        "    var th = document.createElement(\"th\");\n",
+        "    // th要素内にテキストを追加\n",
+        "    th.textContent = key;\n",
+        "    // th要素をtr要素の子要素に追加\n",
+        "    tr.appendChild(th);\n",
+        "  }\n",
+        "  // tr要素をtable要素の子要素に追加\n",
+        "  table.appendChild(tr);\n",
+        "\n",
+        "  // テーブル本体を作成\n",
+        "  for (var i = 0; i < json.length; i++) {\n",
+        "    // tr要素を生成\n",
+        "    var tr = document.createElement(\"tr\");\n",
+        "    // th・td部分のループ\n",
+        "    for (key in json[0]) {\n",
+        "      // td要素を生成\n",
+        "      var td = document.createElement(\"td\");\n",
+        "      // td要素内にテキストを追加\n",
+        "      td.textContent = json[i][key];\n",
+        "      // td要素をtr要素の子要素に追加\n",
+        "      tr.appendChild(td);\n",
+        "    }\n",
+        "    // tr要素をtable要素の子要素に追加\n",
+        "    table.appendChild(tr);\n",
+        "  }\n",
+        "  // 生成したtable要素を追加する\n",
+        "  document.getElementById(\"maintable\").appendChild(table);\n",
+        "</script>\n"
       ],
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "\n",
               "<style>\n",
-              "    th {\n",
-              "        /* ヘッダ背景塗りつぶし */\n",
-              "        background: #eee;\n",
-              "    }\n",
+              "  th,\n",
+              "  td {\n",
+              "    /* 枠線を1本線指定 */\n",
+              "    border: solid 1px;\n",
+              "    width: auto;\n",
+              "  }\n",
               "\n",
-              "    th,\n",
-              "    td {\n",
-              "        /* 枠線を1本線指定 */\n",
-              "        border: solid 1px;\n",
-              "        width: auto;\n",
-              "    }\n",
+              "  table {\n",
+              "    /* 枠線を1本線指定 */\n",
+              "    border: solid 1px;\n",
+              "    border-collapse: collapse;\n",
+              "    white-space: nowrap;\n",
+              "  }\n",
               "\n",
-              "    table {\n",
-              "        /* 枠線を1本線指定 */\n",
-              "        border: solid 1px;\n",
-              "        border-collapse: collapse;\n",
-              "        white-space: nowrap;\n",
-              "    }\n",
-              "    \n",
-              "    table {border-collapse: collapse;border: 2px solid rgb(200, 200, 200);letter-spacing: 1px;font-size: 0.8rem;}td,th {border: 1px solid rgb(190, 190, 190);padding: 10px 20px;}th {background-color: rgb(235, 235, 235);}td {text-align: center;}tr:nth-child(even) td {background-color: rgb(250, 250, 250);}tr:nth-child(odd) td {background-color: rgb(245, 245, 245);}caption {padding: 10px;}\n",
+              "  table {\n",
+              "    border-collapse: collapse;\n",
+              "    border: 2px solid rgb(200, 200, 200);\n",
+              "    letter-spacing: 1px;\n",
+              "    font-size: 0.8rem;\n",
+              "  }\n",
+              "  td,\n",
+              "  th {\n",
+              "    border: 1px solid rgb(190, 190, 190);\n",
+              "    padding: 10px 20px;\n",
+              "  }\n",
+              "  th {\n",
+              "    background-color: rgb(235, 235, 235);\n",
+              "  }\n",
+              "  td {\n",
+              "    text-align: center;\n",
+              "  }\n",
+              "  tr:nth-child(even) td {\n",
+              "    background-color: rgb(250, 250, 250);\n",
+              "  }\n",
+              "  tr:nth-child(odd) td {\n",
+              "    background-color: rgb(245, 245, 245);\n",
+              "  }\n",
+              "  caption {\n",
+              "    padding: 10px;\n",
+              "  }\n",
+              "  tr td:nth-child(2), tr td:nth-child(3) {\n",
+              "  background: #ccc;\n",
               "</style>\n",
               "\n",
-              "<div id='maintable'></div>\n",
+              "<div id=\"maintable\"></div>\n",
               "\n",
               "<script>\n",
-              "    var json = [\n",
+              "  var json = [\n",
               "    {\n",
-              "        \"latin\": \"a-s-salaamu\",\n",
-              "        \"kana\": \"アッサラーム\",\n",
-              "        \"arabic\": \"اَلسَّلَامُ\",\n",
-              "        \"meaning\": \"peace\"\n",
+              "      latin: \"a-s-salaamu\",\n",
+              "      kana: \"アッサラーム\",\n",
+              "      arabic: \"اَلسَّلَامُ\",\n",
+              "      meaning: \"peace\",\n",
               "    },\n",
               "    {\n",
-              "        \"latin\": \"2alaykum\",\n",
-              "        \"kana\": \"アライクム\",\n",
-              "        \"arabic\": \"عَلَيْكُمْ\",\n",
-              "        \"meaning\": \"on you\"\n",
+              "      latin: \"2alaykum\",\n",
+              "      kana: \"アライクム\",\n",
+              "      arabic: \"عَلَيْكُمْ\",\n",
+              "      meaning: \"on you\",\n",
               "    },\n",
               "    {\n",
-              "        \"latin\": \"SabaaH\",\n",
-              "        \"kana\": \"すぁバーふ\",\n",
-              "        \"arabic\": \"صَبَاح\",\n",
-              "        \"meaning\": \"morning\"\n",
+              "      latin: \"SabaaH\",\n",
+              "      kana: \"すぁバーふ\",\n",
+              "      arabic: \"صَبَاح\",\n",
+              "      meaning: \"morning\",\n",
               "    },\n",
               "    {\n",
-              "        \"latin\": \"marHaban\",\n",
-              "        \"kana\": \"マるはバン\",\n",
-              "        \"arabic\": \"مَرْحَبًا\",\n",
-              "        \"meaning\": \"Hello\"\n",
+              "      latin: \"marHaban\",\n",
+              "      kana: \"マるはバン\",\n",
+              "      arabic: \"مَرْحَبًا\",\n",
+              "      meaning: \"Hello\",\n",
               "    },\n",
               "    {\n",
-              "        \"latin\": \"2anaa bikhayr\",\n",
-              "        \"kana\": \"アナー ビクハイる\",\n",
-              "        \"arabic\": \"أَنا بِخَيْر\",\n",
-              "        \"meaning\": \"I'm fine kl;lj ljk;lkj ljkl;kj lkjlkj lkj;lkj l;kj lklk lkj;kj lkj;lkj; ljl;kj lkj;lkj; l;kjl;;ljklkj lkj;ljkl;jk lkj;ljk\"\n",
-              "    }\n",
-              "    ]\n",
+              "      latin: \"2anaa bikhayr\",\n",
+              "      kana: \"アナー ビクハイる\",\n",
+              "      arabic: \"أَنا بِخَيْر\",\n",
+              "      meaning:\n",
+              "        \"I'm fine kl;lj ljk;lkj ljkl;kj lkjlkj lkj;lkj l;kj lklk lkj;kj lkj;lkj; ljl;kj lkj;lkj; l;kjl;;ljklkj lkj;ljkl;jk lkj;ljk\",\n",
+              "    },\n",
+              "  ];\n",
               "\n",
-              "    // table要素を生成\n",
-              "    var table = document.createElement('table');\n",
+              "  // table要素を生成\n",
+              "  var table = document.createElement(\"table\");\n",
               "\n",
-              "    // ヘッダーを作成\n",
-              "    var tr = document.createElement('tr');\n",
+              "  // ヘッダーを作成\n",
+              "  var tr = document.createElement(\"tr\");\n",
+              "  for (key in json[0]) {\n",
+              "    // th要素を生成\n",
+              "    var th = document.createElement(\"th\");\n",
+              "    // th要素内にテキストを追加\n",
+              "    th.textContent = key;\n",
+              "    // th要素をtr要素の子要素に追加\n",
+              "    tr.appendChild(th);\n",
+              "  }\n",
+              "  // tr要素をtable要素の子要素に追加\n",
+              "  table.appendChild(tr);\n",
+              "\n",
+              "  // テーブル本体を作成\n",
+              "  for (var i = 0; i < json.length; i++) {\n",
+              "    // tr要素を生成\n",
+              "    var tr = document.createElement(\"tr\");\n",
+              "    // th・td部分のループ\n",
               "    for (key in json[0]) {\n",
-              "        // th要素を生成\n",
-              "        var th = document.createElement('th');\n",
-              "        // th要素内にテキストを追加\n",
-              "        th.textContent = key;\n",
-              "        // th要素をtr要素の子要素に追加\n",
-              "        tr.appendChild(th);\n",
+              "      // td要素を生成\n",
+              "      var td = document.createElement(\"td\");\n",
+              "      // td要素内にテキストを追加\n",
+              "      td.textContent = json[i][key];\n",
+              "      // td要素をtr要素の子要素に追加\n",
+              "      tr.appendChild(td);\n",
               "    }\n",
               "    // tr要素をtable要素の子要素に追加\n",
               "    table.appendChild(tr);\n",
-              "\n",
-              "    // テーブル本体を作成\n",
-              "    for (var i = 0; i < json.length; i++) {\n",
-              "        // tr要素を生成\n",
-              "        var tr = document.createElement('tr');\n",
-              "        // th・td部分のループ\n",
-              "        for (key in json[0]) {\n",
-              "            // td要素を生成\n",
-              "            var td = document.createElement('td');\n",
-              "            // td要素内にテキストを追加\n",
-              "            td.textContent = json[i][key];\n",
-              "            // td要素をtr要素の子要素に追加\n",
-              "            tr.appendChild(td);\n",
-              "        }\n",
-              "        // tr要素をtable要素の子要素に追加\n",
-              "        table.appendChild(tr);\n",
-              "    }\n",
-              "    // 生成したtable要素を追加する\n",
-              "    document.getElementById('maintable').appendChild(table);\n",
-              "    \n",
+              "  }\n",
+              "  // 生成したtable要素を追加する\n",
+              "  document.getElementById(\"maintable\").appendChild(table);\n",
               "</script>"
             ],
             "text/plain": [
