--- a/learnhtml.ipynb
+++ b/learnhtml.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhtml.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMwWLiwXitzilptYqSpqDXk",
+      "authorship_tag": "ABX9TyNYTGbkHmHdrCSgdzMTo1eq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4710,12 +4710,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FhLMbpnpDLfk",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 153
-        },
-        "outputId": "e9e3efa8-790f-40d0-e7f2-b6fbee3473b7"
+        "id": "FhLMbpnpDLfk"
       },
       "source": [
         "%%html\n",
@@ -4749,38 +4744,80 @@
         "</table>"
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p4FoF3U0P9v9",
+        "outputId": "653de0b1-5173-45ac-be81-1be6dad0156b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 98
+        }
+      },
+      "source": [
+        "%%html\r\n",
+        "<style>\r\n",
+        "    tr td:nth-child(2),\r\n",
+        "tr td:nth-child(3) {\r\n",
+        "  background: #ccc;\r\n",
+        "}\r\n",
+        "</style>\r\n",
+        "<table>\r\n",
+        "  <tr>\r\n",
+        "    <th colspan=\"2\">headline 1</th>\r\n",
+        "    <th>headline 2</th>\r\n",
+        "  </tr>\r\n",
+        "  <tr>\r\n",
+        "    <td>column 1</td>\r\n",
+        "    <td>column 2</td>\r\n",
+        "    <td>column 3</td>\r\n",
+        "  </tr>\r\n",
+        "  <tr>\r\n",
+        "    <td>column 1</td>\r\n",
+        "    <td>column 2</td>\r\n",
+        "    <td>column 3</td>\r\n",
+        "  </tr>\r\n",
+        "  <tr>\r\n",
+        "    <td>column 1</td>\r\n",
+        "    <td>column 2</td>\r\n",
+        "    <td>column 3</td>\r\n",
+        "  </tr>\r\n",
+        "</table>"
+      ],
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "<style>\n",
-              "html {    font-family: sans-serif;  }    table {    border-collapse: collapse;    border: 2px solid rgb(200,200,200);    letter-spacing: 1px;    font-size: 0.8rem;  }    td, th {    border: 1px solid rgb(190,190,190);    padding: 10px 20px;  }    th {    background-color: rgb(235,235,235);  }    td {    text-align: center;  }    tr:nth-child(even) td {    background-color: rgb(250,250,250);  }    tr:nth-child(odd) td {    background-color: rgb(245,245,245);  }    caption {    padding: 10px;  }\n",
+              "    tr td:nth-child(2),\n",
+              "tr td:nth-child(3) {\n",
+              "  background: #ccc;\n",
+              "}\n",
               "</style>\n",
-              "<table id=\"table1\">\n",
-              "    <tr>\n",
-              "        <th>title1</th>\n",
-              "        <th>title2</th>\n",
-              "        <th>title3</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "        <td id=\"nested\">\n",
-              "            <table id=\"table2\">\n",
-              "                <tr>\n",
-              "                    <td>cell1</td>\n",
-              "                    <td>cell2</td>\n",
-              "                    <td>cell3</td>\n",
-              "                </tr>\n",
-              "            </table>\n",
-              "        </td>\n",
-              "        <td>cell2</td>\n",
-              "        <td>cell3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "        <td>cell4</td>\n",
-              "        <td>cell5</td>\n",
-              "        <td>cell6</td>\n",
-              "    </tr>\n",
+              "<table>\n",
+              "  <tr>\n",
+              "    <th colspan=\"2\">headline 1</th>\n",
+              "    <th>headline 2</th>\n",
+              "  </tr>\n",
+              "  <tr>\n",
+              "    <td>column 1</td>\n",
+              "    <td>column 2</td>\n",
+              "    <td>column 3</td>\n",
+              "  </tr>\n",
+              "  <tr>\n",
+              "    <td>column 1</td>\n",
+              "    <td>column 2</td>\n",
+              "    <td>column 3</td>\n",
+              "  </tr>\n",
+              "  <tr>\n",
+              "    <td>column 1</td>\n",
+              "    <td>column 2</td>\n",
+              "    <td>column 3</td>\n",
+              "  </tr>\n",
               "</table>"
             ],
             "text/plain": [
